FIxed font shifting issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "Instrument Serif";
-  src: url("/font/InstrumentSerif-Regular.woff2") format("truetype");
+  src: url("/font/InstrumentSerif-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("/font/Helvetica.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 *,
